--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         max-width: 100%;
         max-height: 100%;
       overflow-x: hidden;
+        scrollbar-width:none;
     }
 </style>
 <iframe class="tepei" src="./index.php"> </iframe>
